[gd_scene load_steps=4 format=3 uid="uid://cjwu7tuaqcjgl"]

[ext_resource type="Script" uid="uid://cubfvdi1vgj36" path="res://inventories/grid/inventory_slot.gd" id="1_0xh8c"]
[ext_resource type="Texture2D" uid="uid://dy4o7cd63f0sv" path="res://inventories/grid/slot.png" id="2_w5rjh"]
[ext_resource type="Texture2D" uid="uid://bidf8wxw1wkkp" path="res://icon.svg" id="3_6c8tj"]

[node name="InventorySlot" type="CenterContainer"]
anchors_preset = -1
anchor_right = 0.067
anchor_bottom = 0.044000003
offset_right = 40.84
offset_bottom = 44.32
grow_vertical = 2
script = ExtResource("1_0xh8c")

[node name="Slot" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("2_w5rjh")

[node name="ItemSprite" type="TextureRect" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_6c8tj")
expand_mode = 3

[connection signal="focus_entered" from="Slot" to="." method="_on_texture_button_focus_entered"]
[connection signal="focus_exited" from="Slot" to="." method="_on_texture_button_focus_exited"]
[connection signal="gui_input" from="Slot" to="." method="_on_texture_button_gui_input"]
